objects/Account.object
<CustomObject>
    <fields>
        <fullName>Allowed_Domains__c</fullName>
        <description>Field use to validate contact email addresses and restrict which domains can be invited to the community</description>
        <inlineHelpText>Enter valid email domain(s) for community users on this account</inlineHelpText>
        <label>Allowed Domains</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>B2B_PAC_CustomerType__c</fullName>
        <label>B2B Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>B2B_Customer_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>B2B_PAC_EnablePO__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable  B2B User to Pay With PO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Account Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Industry,&quot;&quot;),&quot;Industry, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL(Rating,&quot;&quot;), &quot;Rating, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(BillingCity) = 0, &quot;Complete Address, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(Phone) = 0, &quot;Phone, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL(Type,&quot;&quot;), &quot;Type&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( ISPICKVAL(Industry,&quot;&quot;), 0,20) + IF( ISPICKVAL(Rating,&quot;&quot;), 0,20) + IF( LEN(BillingCity) = 0, 0,20) + IF(LEN(Phone) = 0, 0,20) + IF( ISPICKVAL(Type,&quot;&quot;), 0,20)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IFE_PTS_Customer_Category__c</fullName>
        <description>This field is used to determine the price list that is displayed to MyIFE users. This field is sourced from Oracle Customer Master</description>
        <label>PTS Customer Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IFE_RAMCO_Customer_ID__c</fullName>
        <label>RAMCO Customer ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Account_Number__c</fullName>
        <displayFormat>SF-{00000}</displayFormat>
        <label>SF Account Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>L2I_Account_Plan_Template_URL__c</fullName>
        <defaultValue>&quot;https://panasonicwebteam.quip.com/t9ZTA6qjLwtd/Account-Development-Plan?template=1&quot;</defaultValue>
        <description>Field for Quip Document component to store the location of Quip Templates</description>
        <label>Account Plan Template URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Account_Plan_URL__c</fullName>
        <label>xxAccount Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_Account_Status__c</fullName>
        <description>Account Status</description>
        <label>Account Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Status-1</fullName>
                </value>
                <value>
                    <fullName>Status-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Ad_Rev_Share_Airline_Procured__c</fullName>
        <label>Ad Rev Share - Airline Procured</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Advertising_Rep_Firm_Commission__c</fullName>
        <inlineHelpText>This field is only to be used for Advertising Rep Firm Accounts. If this account is for any other type than an Advertising Rep Firm, then please do not enter any values here.</inlineHelpText>
        <label>Advertising Rep Firm Commission</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Airline_Code__c</fullName>
        <description>3 digit Airline Code</description>
        <inlineHelpText>The 3-digit customer code is assigned by PAC and should be the ICAO code for airlines.</inlineHelpText>
        <label>Airline Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Alliance_Membership__c</fullName>
        <label>Alliance Membership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>SkyTeam</fullName>
                </value>
                <value>
                    <fullName>OneWorld</fullName>
                </value>
                <value>
                    <fullName>Star Alliance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Billing_County__c</fullName>
        <description>Billing County</description>
        <label>Billing County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Category_Code__c</fullName>
        <label>Category Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PROSPECT</fullName>
                </value>
                <value>
                    <fullName>AGENT</fullName>
                </value>
                <value>
                    <fullName>AIRLINE</fullName>
                </value>
                <value>
                    <fullName>MISCELLANEOUS</fullName>
                </value>
                <value>
                    <fullName>LEASING COMPANY</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Competitive_Solutions_Offered__c</fullName>
        <label>Competitive Solutions Offered</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Seatback IFE Hardware</fullName>
                </value>
                <value>
                    <fullName>Wireless IFE Hardware</fullName>
                </value>
                <value>
                    <fullName>Connectivity Hardware</fullName>
                </value>
                <value>
                    <fullName>Connectivity Service</fullName>
                </value>
                <value>
                    <fullName>Telephone Service</fullName>
                </value>
                <value>
                    <fullName>Live TV Service</fullName>
                </value>
                <value>
                    <fullName>Custom Software Development</fullName>
                </value>
                <value>
                    <fullName>Maintenance Services</fullName>
                </value>
                <value>
                    <fullName>Cabin Systems</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Competitor_Product__c</fullName>
        <description>Competitor Products</description>
        <label>Competitor Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2Ku</fullName>
                </value>
                <value>
                    <fullName>AirvodPlayer</fullName>
                </value>
                <value>
                    <fullName>Avant</fullName>
                </value>
                <value>
                    <fullName>Bluebox Ai</fullName>
                </value>
                <value>
                    <fullName>Bluebox aIFE</fullName>
                </value>
                <value>
                    <fullName>Bluebox Hybrid</fullName>
                </value>
                <value>
                    <fullName>Bluebox Lite</fullName>
                </value>
                <value>
                    <fullName>Bluebox wIFE</fullName>
                </value>
                <value>
                    <fullName>Bluebox Wow</fullName>
                </value>
                <value>
                    <fullName>Boardconnect</fullName>
                </value>
                <value>
                    <fullName>BoardConnect Dock</fullName>
                </value>
                <value>
                    <fullName>CabinInflight WiFi</fullName>
                </value>
                <value>
                    <fullName>Cab-n-Connect</fullName>
                </value>
                <value>
                    <fullName>Everhub Wireless IFE Fixed</fullName>
                </value>
                <value>
                    <fullName>Everhub wireless IFE portable</fullName>
                </value>
                <value>
                    <fullName>Global Xpress</fullName>
                </value>
                <value>
                    <fullName>IFC Ku2000</fullName>
                </value>
                <value>
                    <fullName>IFE</fullName>
                </value>
                <value>
                    <fullName>InFlyt</fullName>
                </value>
                <value>
                    <fullName>Inmarsat Global Xpress</fullName>
                </value>
                <value>
                    <fullName>Intellicabin</fullName>
                </value>
                <value>
                    <fullName>Internet OnAir</fullName>
                </value>
                <value>
                    <fullName>JetConnect</fullName>
                </value>
                <value>
                    <fullName>PAD</fullName>
                </value>
                <value>
                    <fullName>PAV604</fullName>
                </value>
                <value>
                    <fullName>PAV700</fullName>
                </value>
                <value>
                    <fullName>PAV704</fullName>
                </value>
                <value>
                    <fullName>PAV705</fullName>
                </value>
                <value>
                    <fullName>Rave Broadband</fullName>
                </value>
                <value>
                    <fullName>Rave Centric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Competitor_Type__c</fullName>
        <label>Competitor Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Connectivity</fullName>
                </value>
                <value>
                    <fullName>IFE</fullName>
                </value>
                <value>
                    <fullName>Wireless Streaming</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Connectivity_Admin_Fee__c</fullName>
        <label>Connectivity Admin Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Credit_Terms__c</fullName>
        <label>Credit Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cash in Advance</fullName>
                </value>
                <value>
                    <fullName>Net 30</fullName>
                </value>
                <value>
                    <fullName>Line of Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Customer_Group__c</fullName>
        <label>Customer Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Customer_ID__c</fullName>
        <description>Customer Account ID. External ID of Account, not shown in UI; may be redundant with Party ID</description>
        <externalId>true</externalId>
        <label>Customer ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Customer_Penalties_Count__c</fullName>
        <description>This is a count of all penalties on the penalty object</description>
        <label>Customer Penalties Count</label>
        <summaryForeignKey>L2I_Penalties__c.L2I_Penalties_Account__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>L2I_Header_Status__c</fullName>
        <description>PAC Header Status</description>
        <label>Header Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Status-1</fullName>
                </value>
                <value>
                    <fullName>Status-2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Operator_Number__c</fullName>
        <description>Panasonic Operator Number 2 digit Airline Code; Not entered by sales</description>
        <inlineHelpText>The 2-digit customer code is assigned by PAC and should be the IATA code for airlines.</inlineHelpText>
        <label>Operator Number</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_PO_Required__c</fullName>
        <description>Used to indicate if the customer requires a Purchase Order prior to invoicing</description>
        <label>PO Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Connectivity Services</fullName>
                </value>
                <value>
                    <fullName>Media Services</fullName>
                </value>
                <value>
                    <fullName>Games</fullName>
                </value>
                <value>
                    <fullName>Live Television</fullName>
                </value>
                <value>
                    <fullName>Advertising Services</fullName>
                </value>
                <value>
                    <fullName>Advertisers/Brands</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Party_Id__c</fullName>
        <description>Party Id</description>
        <externalId>true</externalId>
        <label>Party Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Payment_Term_Status__c</fullName>
        <formula>IMAGE(
CASE(TEXT(L2I_Payment_Term__c ),
&quot;Cash in Advance&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;CIA&quot;, &quot;/img/samples/light_red.gif&quot;,
&quot;/img/samples/light_green.gif&quot;),
&quot;Payment Terms color&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Term Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Payment_Term__c</fullName>
        <description>PAC Payment Terms</description>
        <inlineHelpText>Please select payment term</inlineHelpText>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO TERMS</fullName>
                </value>
                <value>
                    <fullName>30 NET</fullName>
                </value>
                <value>
                    <fullName>Cash In Advance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Prospect_Request_Submission_Status__c</fullName>
        <label>Prospect Request Submission Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Region__c</fullName>
        <description>Region</description>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>L2I_Region_2</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>L2I_Requested_Credit_Line__c</fullName>
        <inlineHelpText>Requested credit limit should be for 70% of the net sales dollar value for a given twelve month period.</inlineHelpText>
        <label>Requested Credit Line</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>L2I_Revenue_Share__c</fullName>
        <description>for ad sales to enter the airling revenue share</description>
        <inlineHelpText>Please enter the airline revenue share.</inlineHelpText>
        <label>Revenue Share</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Revenue_Share_to_Airline_Panasonic_P__c</fullName>
        <label>Ad Rev Share - PAC Procured</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>L2I_Shipping_County__c</fullName>
        <description>Shipping County</description>
        <label>Shipping County</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>L2I_Site_Id__c</fullName>
        <description>Site Associated with Customer</description>
        <externalId>true</externalId>
        <label>Site Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>L2I_Strategic_Account_Plan_URL__c</fullName>
        <description>Field for Quip Document component to store the location of file created from template</description>
        <label>Strategic Account Plan URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>OwnerName__c</fullName>
        <formula>Owner.FirstName + &#39; &#39; + Owner.LastName</formula>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PT_Payment_Term_Id__c</fullName>
        <label>Payment Term Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Airlies</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>L2I_Region__c</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>L2I_Category_Code__c</field>
            <operation>equals</operation>
            <value>AIRLINE</value>
        </filters>
        <label>Airlines</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>L2I_Region__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Prospect_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Prospect</value>
        </filters>
        <label>All Prospect Accounts</label>
    </listViews>
    <listViews>
        <fullName>B2B_Accounts_for_Launch</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ACCOUNT_NUMBER</field>
            <operation>equals</operation>
            <value>1091,1114,5072,1022,13802,6090,11081,2760,1435,1481,4342</value>
        </filters>
        <label>B2B Accounts for Launch</label>
    </listViews>
    <listViews>
        <fullName>Competitors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Competitor</value>
        </filters>
        <label>Competitors</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>customer</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Customer</value>
        </filters>
        <label>Customer</label>
    </listViews>
    <recordTypes>
        <fullName>Competitor</fullName>
        <active>true</active>
        <description>Used to track Competitor</description>
        <label>Competitor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Customer</fullName>
        <active>true</active>
        <label>Customer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Prospect</fullName>
        <active>true</active>
        <label>Prospect</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>L2I_AcountName_Number</fullName>
        <active>true</active>
        <description>Account number and Account Name cannot be modified by non Admin Integration user</description>
        <errorConditionFormula>RecordType.DeveloperName == &#39;Customer&#39; &amp;&amp;
!$Setup.L2I_Account_Setting__c.Can_Update_Account_Name__c &amp;&amp;
(  
  ISCHANGED( Name ) ||
  ISCHANGED( AccountNumber ) 
)</errorConditionFormula>
        <errorMessage>Fields within Salesforce that are mastered in Oracle cannot be modified. Please contact Customer Master Team to make changes for Customer Accounts.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Ad_Rep_Commission_Validation</fullName>
        <active>true</active>
        <description>The Advertising Rep Firm Commission field can only be used if the Account Type is &quot;Ad Rep Firm&quot;</description>
        <errorConditionFormula>(ISPICKVAL( Type , &quot;Ad Rep Firm&quot;) = False)  &amp;&amp;  (ISNULL( L2I_Advertising_Rep_Firm_Commission__c ) = False)</errorConditionFormula>
        <errorDisplayField>L2I_Advertising_Rep_Firm_Commission__c</errorDisplayField>
        <errorMessage>This field can only be used if the Account Type is &quot;Ad Rep Firm.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>L2I_Commission_Amount</fullName>
        <active>true</active>
        <description>This is to keep Ad Rep Firm Commission from being over 100%</description>
        <errorConditionFormula>OR( 
L2I_Advertising_Rep_Firm_Commission__c  &gt; 1.0,
 L2I_Advertising_Rep_Firm_Commission__c  &lt; 0.0
)</errorConditionFormula>
        <errorDisplayField>L2I_Advertising_Rep_Firm_Commission__c</errorDisplayField>
        <errorMessage>Commission cannot be more than 100%</errorMessage>
    </validationRules>
</CustomObject>